k8s/listing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-service
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing-service
  template:
    metadata:
      labels:
        app: listing-service
    spec:
      containers:
        - name: listing-service
          image: ghcr.io/baghel004/wanderlust-listing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "160Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 25
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: listing-service
  namespace: wanderlust
spec:
  selector:
    app: listing-service
  ports:
    - port: 4002
      targetPort: 4002
