k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/baghel004/wanderlust-user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 25
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wanderlust
spec:
  selector:
    app: user-service
  ports:
    - port: 4001
      targetPort: 4001
